--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,11 @@
 Django
 psycopg2
 debugpy
+opencv-python-headless
+opencv-python
+numpy
+opencv-contrib-python
+python-dotenv
+pytesseract
+tesserocr
+bardapi
