--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,43 @@
 services:
-  db:
-    image: postgres
-    env_file:
-      - .env
-    ports:
-      - "5432:5432"
-    networks:
-      - net
-    restart: unless-stopped
-    volumes:
-      - ./data:/var/lib/postgresql/data
   app:
     build: ./src
     env_file:
       - .env
-    command: python manage.py runserver 0.0.0.0:8000
+    # command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./src:/app
     ports:
-      - "8000:8000"
       - "5678:5678"
+      - "8000:8000"
     networks:
       - net
     restart: unless-stopped
-    depends_on:
-      - db
-  pgadmin:
-    image: dpage/pgadmin4
-    env_file:
-      - .env
-    networks:
-      - net
-    volumes:
-       - ./pgadmin:/var/lib/pgadmin
-    ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    restart: unless-stopped
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
+  # db:
+  #   image: postgres
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - "5432:5432"
+  #   networks:
+  #     - net
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./data:/var/lib/postgresql/data
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - net
+  #   volumes:
+  #      - ./pgadmin:/var/lib/pgadmin
+  #   ports:
+  #     - "${PGADMIN_PORT:-5050}:80"
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - db
 
 networks:
   net:
