--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -14,7 +14,7 @@ ENV BARD1PSID=$BARD1PSID
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-EXPOSE 5678
+#EXPOSE 5678
 EXPOSE 8000
 
 WORKDIR /app
