add chatGPT call

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,7 +10,9 @@ apt-get clean && \
 rm -rf /var/lib/apt/lists/*
 
 ARG BARD1PSID
+ARG CHATGPT
 ENV BARD1PSID=$BARD1PSID
+ENV CHATGPT=$CHATGPT
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
