--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,11 @@
 Django
-psycopg2
+#psycopg2
 debugpy
 opencv-python-headless
-opencv-python
-opencv-contrib-python
+#opencv-python
+#opencv-contrib-python
 numpy
 pytesseract
 qreader
 revChatGPT
-bardapi
+#bardapi
